--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Ember Technologies
-subTitle: Bringing media rich formatting to a screen near you.
+title: AimPoint LLC
+subTitle: Firearms training for everyone.
 ---
