--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 layout: default
 title: Aim Point LLC
-subTitle: Firearms training for everyone.
+subTitle: Whether you are a beginner or want to improve your skills here's the place to come!  
+​
+Providing classes in group settings or on an individual basis!  
+​
+Specializing in Women shooters.
 ---
