fixed broken page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 ---
 layout: default
 title: Aim Point LLC
-subTitle: Whether you are a beginner or want to improve your skills here's the place to come!  
-​
-Providing classes in group settings or on an individual basis!  
-​
-Specializing in Women shooters.
+subTitle: Specializing in Women Shooters.
 ---
