fixed broken page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: Aim Point LLC
-subTitle: Specializing in Women Shooters.
+subTitle: Firearms Instruction Done Right.
 ---
